# starflow

./: .rustfmt.toml  Cargo.toml
assets/shaders/: blit.wgsl  fullscreen.wgsl  main_pass.wgsl
client/app/: Cargo.toml
client/app/src/: main.rs  render.rs
client/render/: Cargo.toml
client/render/src/: config.rs  graph.rs  lib.rs  module.rs  renderer.rs  resources.rs  scene.rs  util.rs
client/render/src/assets/: assets.rs  bind_groups.rs  desc.rs  mod.rs  pipelines.rs  resource_cache.rs  util.rs
client/render/src/core/: frame.rs  mod.rs  surface.rs
client/render/src/core/surface/: mod.rs
client/render/src/core/util/: bind_groups.rs  mod.rs
client/render/src/resources/: bind_groups.rs  mod.rs  pipelines.rs  resource_cache.rs  resources.rs
client/render/src/util/: mod.rs  surface.rs
client/window/: Cargo.toml
client/window/src/: lib.rs  module.rs  runner.rs
client/window/src/runner/: handler.rs  mod.rs
shared/util/: Cargo.toml
shared/util/src/: lib.rs  registry.rs  size.rs
