[workspace]
resolver = "3"
members = ["client/*", "shared/*"]

[workspace.dependencies]
glued = { path = "../glued"}
starflow-client-app = { path = "client/app" }
starflow-render = { path = "client/render" }
starflow-window = { path = "client/window" }
starflow-util = { path = "shared/util" }

wgpu = "25.0.0"
winit = "0.30.12"
ahash = "0.8.12"
