[package]
name = "starflow-render"
version = "0.1.0"
edition = "2024"

[features]
winit = ["dep:winit"]

[dependencies]
glued = { workspace = true }
starflow-util = { workspace = true, features = ["winit", "wgpu"] }

wgpu =  { workspace = true }
ahash = { workspace = true }
default = "0.1.2"

winit = { workspace = true, optional = true}
